--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━━━━</small></p>
+                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━</small>
                                     <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>I am the founder of this project, although I consider it as a friendly family, where everyone's opinion is equal.</small></p>
                                         <p><small>Basically, I'm coming up with all the ideas here and making various content for all of our social networks.</small></p> 
                                         <p><b>„It's not just a job, it's a way of life"</b> - <small>Milan</small></p>
@@ -210,7 +210,7 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━━━━</small></p>
+                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━</small>
                                     <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small> I'm CEO & Co - Founder of the small project named „Stork of Freedom”.</small></p>
                                         <p><small>I'm responsible for the organization of the workflow, figure out small design tasks and develop this webpage. Together with Milan we search and negotiate with partners.</small></p> 
                                         <p><b>„Shit happens all the time and we learn how to deal with it”</b> - <small>diman.s</small></p>
@@ -240,7 +240,7 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━━━━</small></p>
+                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━</small>
                                     <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>I'm the member of this team, who is responsible for the Discord channel.</small></p>
                                         <p><small>In the project, i figure out all of the cases and complete multiple tasks which should be solved, especially smart contract.</small></p> 
                                         <p><b>„This project is impressive and i'm sure that i can be proud of it”</b> - <small>Arthur</small></p>
@@ -270,7 +270,7 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━━━━</small></p>
+                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━</small>
                                     <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>I'm the webdesigner of the project „Stork of Freedom”.</small></p>
                                         <p><small>I was working on the design of this website and i hope, you will like it.</small></p> 
                                         <p><b>„JØKИ4 invited me and i didn't miss such a great opportunity to help my nation! Thank you, guys”</b> - <small>Artiom</small></p>
@@ -300,8 +300,8 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━━</small></p>
-                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>I am an artist and i came up with the idea of the Ukrainian symbol - stork🕊.</small></p>
+                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━</small>
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>I am an artist and i came up with the idea of the Ukrainian symbol - stork🕊️.</small></p>
                                         <p><small>I realize all the ideas with a brush on paper.</small></p>  
                                         <p><b>„When there is a war and people are dying, you have to do what you do the best. I can draw, so I drew the collection for my country”</b> - <small>Ilona</small></p>
                                     </span>
@@ -327,7 +327,7 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━━━━</small>
+                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━</small>
                                     <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>Я являюсь человеком который отвечает за весь Дискорд.</small></p>
                                         <p><small>В проекте обычно я помогаю прийти к решению проблем и занимаюсь мелкими работами которые нудно выполнять остальным.</small></p> 
                                         <p><b>„Этот проект это то чем я могу гордиться”</b> - <small>Clown</small></p>
