--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                             <div class="team-member_img">
                                 <div class="back">
                                     <small>━━━━━━━━━━━━━━━━━━━━━━━━━</small>
-                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>I am an artist and i came up with the idea of the Ukrainian symbol - stork🕊️.</small></p>
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>I am an artist and i came up with the idea of the Ukrainian symbol - stork.</small></p>
                                         <p><small>I realize all the ideas with a brush on paper.</small></p>  
                                         <p><b>„When there is a war and people are dying, you have to do what you do the best. I can draw, so I drew the collection for my country”</b> - <small>Ilona</small></p>
                                     </span>
