--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                             <div class="team-member_img">
                                 <div class="back">
                                     <small>━━━━━━━━━━━━━━━━━━━━━━━━━</small>
-                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small> I'm CEO & Co - Founder of the small project named „Stork of Freedom”.</small></p>
-                                        <p><small>I'm responsible for the organization of the workflow, figure out small design tasks and develop this webpage. Together with Milan we search and negotiate with partners.</small></p> 
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small> I'm CEO & Co - Founder of the charity project „Stork of Freedom”.</small></p>
+                                        <p><small>Responsible for the organization of the workflow, figure out small design tasks and develop this webpage. Together with Milan we search and negotiate with partners.</small></p> 
                                         <p><b>„Shit happens all the time and we learn how to deal with it”</b> - <small>diman.s</small></p>
                                     </span>
                                 </div>
@@ -273,7 +273,7 @@
                                     <small>━━━━━━━━━━━━━━━━━━━━━━━━━</small>
                                     <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>I'm the webdesigner of the project „Stork of Freedom”.</small></p>
                                         <p><small>I was working on the design of this website and i hope, you will like it.</small></p> 
-                                        <p><b>„JØKИ4 invited me and i didn't miss such a great opportunity to help my nation! Thank you, guys”</b> - <small>Artiom</small></p>
+                                        <p><b>„JØKИ4 invited me and i didn't miss such a great opportunity to help my nation”</b> - <small>Artiom</small></p>
                                     </span>
                                 </div>
                                 <div class="front">
