--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
                             </div>
-                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/nikussiiaaa/"
+                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/mariafedoniuk/"
                                     target="_blank"><img src="images/partnership/116.png" alt="" class="rounded-circle"
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
@@ -833,7 +833,7 @@
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
                             </div>
-                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/fleshka._/"
+                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/nikussiiaaa/"
                                     target="_blank"><img src="images/partnership/226.png" alt="" class="rounded-circle"
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
