--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
                             <div class="team-member_img">
                                 <div class="back">
                                     <small>━━━━━━━━━━━━━━━━━━━━━━━━━</small>
-                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>Я являюсь человеком который отвечает за весь Дискорд.</small></p>
-                                        <p><small>В проекте обычно я помогаю прийти к решению проблем и занимаюсь мелкими работами которые нудно выполнять остальным.</small></p> 
-                                        <p><b>„Этот проект это то чем я могу гордиться”</b> - <small>Clown</small></p>
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>I'm volunteer of "Stork of Freedom" project.</small></p>
+                                        <p><small>Responsible for delivery process, equipping soldiers and distributing humanitarians</small></p> 
+                                        <p><b>„I liked the project from the first sight. I felt the professionalism of the team and supported its goals. Nowadays, we need to help each other and do what we can”</b> - <small>Salavat</small></p>
                                     </span>
                                 </div>
                                 <div class="front">
@@ -341,8 +341,6 @@
 
                         <h4></h4>
                         <p class="text-muted">Salavat</p>
-                        <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-twitter"></i></a> -->
                         <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/o_salavat_g/"
                             aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -777,7 +775,7 @@
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
                             </div>
-                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/mariafedoniuk/"
+                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/nikussiiaaa/"
                                     target="_blank"><img src="images/partnership/116.png" alt="" class="rounded-circle"
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
@@ -825,6 +823,8 @@
                                     target="_blank"><img src="images/partnership/24.png" alt="" class="rounded-circle"
                                         style="width:125%;"></a></div>
 
+
+                                        
                             <hr class="my-3 reveal" style="color:rgb(142, 142, 142);">
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
                             </div>
@@ -833,7 +833,7 @@
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
                             </div>
-                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/nikussiiaaa/"
+                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/fleshka._/"
                                     target="_blank"><img src="images/partnership/226.png" alt="" class="rounded-circle"
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
