--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             <div class=" collapse navbar-collapse" id="navbarSupportedContent">
 
                 <a class="navbar-brand px-3" href="https://discord.gg/bctKkb2xMJ"><img src="images/Vectordiscord.lg.png"
-                        alt="..." style="width:80%; height:80%; " /></a>
+                        alt="..."  /></a>
                 <a class="navbar-brand px-3" href="https://twitter.com/StorkOfFreedom "><img
-                        src="images/Vectortwitter.lg.png" alt="..." style="width:80%; height:80%; " /></a>
+                        src="images/Vectortwitter.lg.png" alt="..."  /></a>
                 <a class="navbar-brand px-3" href="https://www.instagram.com/sof.nft/"><img
-                        src="images/Vectorinsta.lg.png" alt="..." style="width:80%; height:80%; " /></a>
+                        src="images/Vectorinsta.lg.png" alt="..."  /></a>
                 <a class="navbar-brand px-3" href="https://github.com/StorkNFT?tab=projects"><img
-                        src="images/Vectorgithub.lg.png" alt="..." style="width:75%; height:75%; " /></a>
+                        src="images/Vectorgithub.lg.png" alt="..."/></a>
 
             </div>
 
@@ -775,12 +775,12 @@
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
                             </div>
-                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/nikussiiaaa/"
+                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/mariafedoniuk/"
                                     target="_blank"><img src="images/partnership/116.png" alt="" class="rounded-circle"
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
                             </div>
-                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/deankaaaa/"
+                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/nkvrch/"
                                     target="_blank"><img src="images/partnership/177.png" alt="" class="rounded-circle"
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
@@ -794,7 +794,7 @@
 
 
                             <hr class="reveal" style="color:rgb(142, 142, 142);">
-                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/__._r_i_n_k_a_.__/"
+                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/deankaaaa"
                                     target="_blank"><img src="images/partnership/17.png" alt="" class="rounded-circle"
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
@@ -833,7 +833,7 @@
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
                             </div>
-                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/fleshka._/"
+                            <div class="col-4 col-lg-1 reveal"><a href="https://www.instagram.com/nikussiiaaa/"
                                     target="_blank"><img src="images/partnership/226.png" alt="" class="rounded-circle"
                                         style="width:125%;"></a></div>
                             <div class="col-4 col-lg-1"><img src="#" alt="" class="rounded-circle" style="width:125%;">
